# Extrator-de-Leads---RFTec

./: .env  .env.teste  .gitignore  README.md  config.py  enriquecer_leads.py  enriquecimento_leads.py  extrator_leads.py  extrator_leads_pabx_internet.py  extrator_places_api.py  jucesc_scraper.py  linkedin_scraper.py  main.py  package-lock.json  package.json  pyproject.toml  requirementes.txt  requirements.txt  testeIntegridade.js  teste_enriquecimento.py  teste_enriquecimento_transportadoras.py  teste_extrator.py  teste_extrator_maps.py  teste_transportadoras.py  tsconfig.json
backend/: main.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx
leadhunter-maps/: .gitignore  README.md  package.json
leads/: advocacia_2025-05-20T11-00-50-788246_enriquecido_2025-05-22T13-25-37.csv  transportadoras_2025-05-21T10-31-30-150972.csv  transportadoras_2025-05-22T13-29-23-284374_enriquecido_2025-05-22T17-00-06.csv
src/: __init__.py  extrator.py  extrator_leads.py  index.ts  teste_extrator.py
src/config/: keys.ts  whitelist.ts
src/exemplos/: testeBasico.ts  testeEnvioMensagensLeads.ts  testeEnvioMensagensLeadsExistentes.ts  testeExtratorLeadsSimulado.ts  testeGoogleMapsScraper.ts  testeLeadManager.ts  testeLeads.ts  testeNovoExtrator.ts  testeOSMScraper.ts  testePromptVendedor.ts  testeScraperLeads.ts  testeTransportadoraGuarulhos.ts  testeTransportadoraGuarulhosComConversas.ts  usoExtratorLeads.ts  usoPromptManager.ts
src/service/: audio.ts  deepseek.ts  (+8 more)
(+199 files in other folders)
